--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ img{
 }
 
 h1{
-  font-family: Ultra;
+  font-family: "Lilita One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 p{
