--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,7 @@
     margin: 0;
     padding: 0;
 }
-@font-face {
-  font-family:Ultra ;
-  src: url(..//webfonts/Ultra-Regular.ttf);
-}
-@font-face {
-  font-family: Unbounded;
-  src: url(..//webfonts/Unbounded-VariableFont_wght.ttf);
-}
+
 
 img{
   width: 100px;
@@ -22,7 +15,18 @@ h1{
   font-style: normal;
 }
 
-p{
-  font-family: Unbounded;
-  color: rgb(151, 151, 151);
+p,h5,button{
+  font-family: "Aclonica", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 26px;
+}
+button{
+  background-color: brown;
+  color: white;
+  transition: .5s;
+}
+button:hover{
+  background-color: rgba(165, 42, 42, 0.774);
+
 }
